tests: Test infrastructure created

--- a/Semestralni_prace/Makefile
+++ b/Semestralni_prace/Makefile
@@ -8,7 +8,7 @@ ifeq ($(DEBUG),true)
 else
 	CXXFLAGSDEBUG	= -g3 -fsanitize=address
 endif
-CXXFLAGS	=	-std=c++17 -pedantic -Wall $(CXXFLAGSDEBUG)
+CXXFLAGS	=	-std=c++17 -pedantic -Wall -Wextra -O3 $(CXXFLAGSDEBUG)
 
 # External libraries used
 LIBS	=	-lncourser
@@ -30,8 +30,13 @@ SOURCES := $(call rwildcard,src/,*.cpp)
 OBJECTS := $(patsubst %.cpp,%.o,$(SOURCES))
 DEPENDS := $(patsubst %.cpp,%.d,$(SOURCES))
 HEADERS := $(call rwildcard,src/,*.hpp) $(call rwildcard,src/,*.h)
-#SOURCES := $(shell find . -name '*.cpp' | sed 's/\.\///' )
-#HEADERS := $(shell find . -name '*.hpp' -or -name '*.h' | sed 's/\.\///' )
+
+TEST_FILE = test
+#TEST_SOURCES := $(call rwildcard,tests/,*.cpp) $(filter-out src/cz/lastaapps/vimxel/main.cpp, $(SOURCES))
+TEST_SOURCES := $(call rwildcard,tests/,*.cpp) $(filter-out $(call rwildcard,src/,main.cpp), $(SOURCES))
+TEST_OBJECTS := $(patsubst %.cpp,%.o,$(TEST_SOURCES))
+TEST_DEPENDS := $(patsubst %.cpp,%.d,$(TEST_SOURCES))
+TEST_HEADERS := $(call rwildcard,tests/,*.hpp) $(call rwildcard,tests/,*.h) $(filter-out $(call rwildcard,src/,main.hpp) $(call rwildcard,src/,main.h), $(HEADERS))
 
 # These task will be run also if files of their name exists
 .PHONY: all clean doc run compile
@@ -51,6 +56,32 @@ compile:	$(USERNAME)
 run:
 	@./$(USERNAME)
 
+# Tests
+compileTest:	$(TEST_FILE)
+runTest:
+	@./$(TEST_FILE)
+
+
+
+
+# --- COMPILATION --------------------------------------------------------------
+# link the final program
+$(USERNAME) : $(OBJECTS) Makefile
+	$(CXX) $(LFLAGS) $(OBJECTS) -o $@
+	@echo compiled!
+
+# link tests
+$(TEST_FILE) : $(TEST_OBJECTS) Makefile
+	$(CXX) $(LFLAGS) $(TEST_OBJECTS) -o $@
+	@echo compiled!
+
+# includes .d files as dependencies
+-include	$(DEPENDS) $(TEST_DEPENDS)
+
+# compile a C++ module and create .d files
+%.o : %.cpp Makefile
+	$(CXX) $(CXXFLAGS) -MMD -MP -c $< -o $@
+
 
 
 
@@ -68,21 +99,8 @@ doc/html/index.html: $(SOURCES) $(HEADERS) Doxyfile Makefile
 # clean up
 # delete .o files, .d files, final executable, doc and memory dumps
 clean:
-	rm -f $(OBJECTS) $(DEPENDS) $(USERNAME) core
+	rm -f $(OBJECTS) $(DEPENDS) $(USERNAME)
+	rm -f $(TEST_OBJECTS) $(TEST_DEPENDS) $(TEST_FILE)
+	rm -f core
 	rm -fr doc
-
-
-
-
-# --- COMPILATION --------------------------------------------------------------
-# link the final program
-$(USERNAME) : $(OBJECTS) Makefile
-	$(CXX) $(LFLAGS) $(OBJECTS) -o $@
-
-# includes .d files as dependencies
--include	$(DEPENDS)
-
-# compile a C++ module and create .d files
-%.o : %.cpp Makefile
-	$(CXX) $(CXXFLAGS) -MMD -MP -c $< -o $@
 
